objects/CIJobLogs__c.object
<CustomObject>
    <fields>
        <fullName>ClassProcessName__c</fullName>
        <label>Class / Process Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line__c</fullName>
        <label>Line #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>StackTrace__c</fullName>
        <label>Stack Trace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CI Job Log</label>
    <listViews>
        <fullName>Logs</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>ClassProcessName__c</columns>
        <columns>Message__c</columns>
        <columns>Line__c</columns>
        <columns>StackTrace__c</columns>
        <filterScope>Everything</filterScope>
        <label>Logs</label>
    </listViews>
    <nameField>
        <displayFormat>Log-{0}</displayFormat>
        <label>Log #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CI Job Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>